# Logging

./: .gitignore  CMakeLists.txt
cmake/: ProjectSetup.cmake
include/logging/: logging.hpp
test/: basic_test.cpp
